--- a/server/public/tracker.css
+++ b/server/public/tracker.css
@@ -5,11 +5,22 @@
 	border-radius: 5px;
 }
 
-#coords {
+#coordsBox {
 	margin: 0.5em;
 	padding: 0.5em;
 	border: 2px solid #666;
 	border-radius: 1em;
+}
+
+#coordsBox h3 {
+	margin: 0.3em;
+}
+
+#coords > div {
+	border-top: 1px solid #888;
+}
+#coords > div:first-child {
+	border-top: none;
 }
 
 #map_canvas {
